<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RepWifi</string>
    <string name="menu_credits">Info and Credits</string>
    <string name="scan_networks">Scan for Networks</string>
    <string name="title_activity_select_network">Select Network</string>
    <string name="rescan">Repeat Scan</string>
    <string name="button_text_next">Next &gt;</string>
    <string name="insert_nets_password">Insert a Password to connect to:</string>
    <string name="show_password">Show password</string>
    <string name="title_activity_connect">ConnectActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_show_status">Connection status</string>
    <string name="back_main">Back to main</string>
    <string name="disconnect">Disconnect</string>
    <string name="force_disconnect">Force Disconnection</string>
    <string name="title_activity_long_task">LongTaskActivity</string>
    <string name="title_activity_manage_networks">ManageNetworksActivity</string>
    <string name="delete">Delete network info</string>
    <string name="manage_networks">Manage Networks</string>
    <string name="title_activity_credits">Credits</string>
    <string name="credit_text">Copyright 2017 Filippo \&quot;Fil\&quot; Bergamo&lt;br/&gt;&lt;br/&gt;This app is Free Software.&lt;br/&gt;It\'s licensed under the terms of &lt;a href=&quot;https://www.gnu.org/licenses/gpl.txt&quot;&gt;GPL v3&lt;/a&gt;&lt;br/&gt;&lt;br/&gt;This app is developed as a contribution to &lt;br/&gt;&lt;a href=&quot;http://www.replicant.us&quot;&gt;The Replicant Project&lt;/a&gt;&lt;br/&gt;&lt;br/&gt;&lt;b&gt;&lt;u&gt;&lt;big&gt;Thank GNUs:&lt;/big&gt;&lt;/u&gt;&lt;/b&gt;&lt;br/&gt;&lt;br/&gt;&lt;b&gt;Tiberiu - Technoethical&lt;/b&gt;&lt;br/&gt;for having done the initial job of porting libre WiFi to Replicant 4.2.&lt;br/&gt;&lt;br/&gt;&lt;b&gt;Wolfgang Wiedmeyer&lt;/b&gt;&lt;br/&gt;for porting libre WiFi to Replicant 6.0 and for helping with the scripts.&lt;br/&gt;&lt;br/&gt;To report on bugs, request features, or any help request, please refer to:&lt;br/&gt;&lt;a href=&quot;http://redmine.replicant.us/projects/replicant/boards&quot;&gt;Replicant\'s Forum&lt;/a&gt;&lt;br/&gt;&lt;br/&gt;Source code is hosted at: &lt;br/&gt;&lt;a href=&quot;https://git.replicant.us/contrib/Fil/RepWifiApp/&quot;&gt;https://git.replicant.us/contrib/Fil/RepWifiApp/&lt;/a&gt;&lt;br/&gt;</string>
    <string name="menu_config">Settings</string>
    <string name="msg_interface_not_found">WiFi adapter not found!\nPlease plug in a supported WiFi adapter and retry.</string>
    <string name="msg_confirm_delete_network">Are you sure you want to delete this network?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="retry">Retry</string>
    <string name="msg_root_disabled">Root access is disabled.\n\nSeems like root access is disabled on this device.\nRepWifi needs root access in order to work.\nPlease, enable root access for applications in:\nSettings > Developer options > Root access > "Apps only"\nWhen done so, restart RepWifi and grant the permission to use root, if asked.</string>
    <string name="msg_root_denied">Root access denied.\nSeems like you denied root access to RepWifi.\nRepWifi needs root access in order to work.\nPlease, restart the application, and grant RepWifi the permission to use root, when asked.</string>
    <string name="connect_hidden">Connect to Hidden Network</string>
    <string name="input_ssid">Or.. Insert Network\'s name (SSID)</string>
    <string name="title_activity_input_ssid">Insert Network\'s Name</string>
    <string name="menu_settings">Settings</string>
    <string name="select_saved_net">Use Saved Network</string>
    <string name="dns1_default">185.121.177.177</string>
    <string name="dns2_default">169.239.202.202</string>
    <string name="receiver_description">RepWifi\'s listener for startup event. Provides auto-start and notification features to RepWifi.</string>
    <string name="confirm_reset_settings">Are you sure you want to reset all settings to default?</string>
    <string name="confirm_kill_backend">Are you sure you want to kill the back-end processes?</string>
    <string name="summary_kill_backend">Sometimes back-end programs get stuck in inconsistent states.\nClicking this button restores normal behaviour by killing running instances of wpa_supplicant and dhcpcd."</string>

</resources>