<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    android:padding="15dp" >

    <TextView
        android:id="@+id/txt_main"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        android:maxLines="10"
        android:text=""
        android:textColor="@color/ThemeLight" />

    <Button
        android:id="@+id/btn_scan"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/repwifi_button"
        android:onClick="btnScanClick"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/scan_networks"
        android:textColor="@color/ThemeLight" />

    <Button
        android:id="@+id/btn_hidden_ssid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_scan"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/repwifi_button"
        android:onClick="btnHiddenClick"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/connect_hidden"
        android:textColor="@color/ThemeLight" />
    
    <Button
        android:id="@+id/btn_manage_nets"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_hidden_ssid"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/repwifi_button"
        android:onClick="btnManageClick"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/manage_networks"
        android:textColor="@color/ThemeLight" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btn_manage_nets"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp" >
    </ImageView>

</RelativeLayout>