<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".InputPasswordActivity" >

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black" >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_insert_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/black"
                android:maxLines="10"
                android:text="@string/insert_nets_password"
                android:textColor="@color/ThemeLight"
                android:textSize="10pt" />

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/ThemeLight"
                android:background="@drawable/button_bg"
                android:textCursorDrawable="@null"
                android:textSize="10pt"
                android:padding="5dp" />

            <CheckBox
                android:id="@+id/chk_show_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_password"
				android:textColor="@color/ThemeLight"
        		android:textSize="9pt" /> 

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:background="@drawable/repwifi_button"
                android:onClick="onBtnNextClick"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/button_text_next"
                android:textColor="@color/ThemeLight" />
        </LinearLayout>
    </ScrollView>

</merge>