<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="20dp"
    tools:context=".InputSsidActivity" >

    <!--  -->

    <Button
        android:id="@+id/btn_select_hidden_ssid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/repwifi_button"
        android:onClick="onBtnSelectClick"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/select_saved_net"
        android:textColor="@color/ThemeLight" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/btn_select_hidden_ssid"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/ThemeLight" />

    <TextView
        android:id="@+id/txt_insert_ssid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@color/black"
        android:maxLines="1"
        android:text="@string/input_ssid"
        android:textColor="@color/ThemeLight"
        android:textSize="9pt" />

    <EditText
        android:id="@+id/txt_ssid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_insert_ssid"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_bg"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/ThemeLight"
        android:textCursorDrawable="@null"
        android:padding="5dp"
        android:textSize="10pt" />

    <LinearLayout
        style="@style/LoginFormContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_ssid"
        android:background="@color/black"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_next_hidden_ssid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="16dp"
            android:background="@drawable/repwifi_button"
            android:onClick="onBtnNextClick"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/button_text_next"
            android:textColor="@color/ThemeLight" />
    </LinearLayout>

</RelativeLayout>